module8/2/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster
spec:
  selector:
    app: httpserver
  ports:
  - name: default
    protocol: TCP
    port: 8080
    targetPort: 80
