module8/2/loadbalance-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: loadbalance-server
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: httpserver
  type: LoadBalancer
