module8/2/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-tls-80
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: www.jk.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: nodeport-service
                port:
                  number: 8080
  tls:
    - hosts:
        - www.jk.com
      secretName: mod8-tls
